  org.jasypt.salt.StringFixedSaltGenerator and org.jasypt.salt.ByteArrayFixedSaltGenerator,
  deprecating old equivalents "FixedStringSaltGenerator" and "FixedByteArraySaltGenerator". This 
  new interface allows applying important performance optimizations to encryption operations when
  using fixed salt. 
- Updated testing-scope dependencies. 


1.9.1
=====
- Fixed insufficient entropy in RandomSaltGenerator due to seeding mechanism.
- Fixed CLI scripts for Windows and CYGWIN environments. 


1.9.0
=====
- Divided old "jasypt" artifact into several modules:
  * jasypt (core)
  * jasypt-hibernate3
  * jasypt-hibernate4
  * jasypt-spring2
  * jasypt-spring3
  * jasypt-acegisecurity
  * jasypt-springsecurity2
  * jasypt-springsecurity3
  * jasypt-wicket13
  * jasypt-wicket15
- Fixed error in CLI .bat files resulting in bad processing of CLI commands
  which involved passwords containing exclamation mark symbols.
- Fixed bug in PooledPBEStringEncryptor which caused first encryptor in pool not
  use hexadecimal output type.
- Added implementation of Hashtable's "get(Object)" method to 
  org.jasypt.properties.EncryptableProperties, so that this method now performs
  decryption instead of it only being performed at "getProperty(key)".
  

1.8
===
- Small bugfixing for large BigInteger number decryption.
- Modified in-memory storage of PBE passwords to avoid having Strings in memory that contain
  the password being used. Now PBE passwords are stored as char[] objects that are zeroed as
  soon as they are used. New "setPasswordCharArray(char[] password)" methods allow users to
  specify passwords as char[] also, so that there is no need to create String passwords.
- Modified the order in which Normalizer implementations are used: now icu4j is used if it is
  in the classpath (even if Java >= 6 is being used). If icu4j is not present, java.text.Normalizer
  is used (if Java >= 6).
- Fixed CLI scripts: *.jar in "find" command was matching jar files in the current folder 